--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,12 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location to track your runs.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>We need access to your health data to track your runs and streaks.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>We need access to update your health data with your runs.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
