--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,16 @@
 	<string>We need access to your health data to track your runs and streaks.</string>
 	<key>NSHealthUpdateUsageDescription</key>
 	<string>We need access to update your health data with your runs.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>healthkit</string>
+	</array>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Needed to connect to the Flutter debugger.</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_dartobservatory._tcp</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
