--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   flutter_local_notifications: ^19.3.0
   device_info_plus: ^11.5.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
