--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   flutter_local_notifications: ^19.3.0
   device_info_plus: ^11.5.0
   intl: ^0.20.2
+  flutter_lints: ^6.0.0
+  shared_preferences: ^2.5.3
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
