--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_lints: ^6.0.0
   shared_preferences: ^2.5.3
   timezone: ^0.10.1
+  flutter_timezone: ^1.0.8
 
 dev_dependencies:
   flutter_test:
