--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   http: ^1.2.2
   package_info_plus: ^8.0.0
   url_launcher: ^6.3.1
+  flutter_web_auth: ^0.4.0
+  oauth2: ^2.0.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
